[package]
name = "genesis-vote-program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "genesis_vote_program"
path = "src/lib.rs"

[features]
no-entrypoint = []

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
litesvm = { workspace = true }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
distribution-program = { path = "../distribution", features = ["no-entrypoint"] }
subledger-program = { path = "../subledger", features = ["no-entrypoint"] }
