[package]
name = "subledger-program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "subledger_program"
path = "src/lib.rs"

[features]
no-entrypoint = []

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
litesvm = { workspace = true }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
percolator-prog = { workspace = true }
percolator = { git = "file:///home/anatoly/percolator", rev = "58dc11803ebbb272d84db410168f55f3eeb5acd4" }
genesis-vote-program = { path = "../genesis-vote", features = ["no-entrypoint"] }
distribution-program = { path = "../distribution", features = ["no-entrypoint"] }
solana-program-runtime = "1.18"
