[package]
name = "twap-program"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "twap_program"
path = "src/lib.rs"

[features]
no-entrypoint = []

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
litesvm = { workspace = true }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
percolator-prog = { workspace = true }
percolator = { path = "../../percolator" }
solana-program-runtime = "1.18"
